tests/format/misc/errors/vue/unclosed_tag_in_template.vue
<template>
  <p>Templates are formatted as well...
    </
</template>
